--- a/cme-ui/src/index.html
+++ b/cme-ui/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Angular 2 Demo</title>
+  <title>CME R&D Center</title>
   <base href="/">
   <script src="//cdn.auth0.com/js/lock/10.2.2/lock.min.js"></script>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
